[gd_scene load_steps=49 format=3 uid="uid://decpyxnu3oocl"]

[ext_resource type="Script" path="res://World Scene/characters/npc.gd" id="1_7ll4o"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/dialogueBox.gd" id="2_kithy"]
[ext_resource type="Texture2D" uid="uid://doiir868tc3od" path="res://Assets/UISprites/UI_Flat_Button_Small_Release_02a3.png" id="2_ln8m6"]
[ext_resource type="Texture2D" uid="uid://c7a7s1w74cayf" path="res://Assets/UISprites/UI_Flat_Button_Small_Release_02a1.png" id="3_vf4oi"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="4_1oy2a"]
[ext_resource type="Resource" uid="uid://2d0hvs0mqxeq" path="res://Dialogues/Dialogue.tres" id="4_pn0gs"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="5_hejlf"]
[ext_resource type="Texture2D" uid="uid://bna313s5hn76v" path="res://Assets/Custom/Sprites/Angelica.png" id="8_86348"]
[ext_resource type="Texture2D" uid="uid://d2fnbceys5gli" path="res://Assets/Custom/Sprites/Barry.png" id="8_k6djr"]
[ext_resource type="Texture2D" uid="uid://dqf358j6pwkju" path="res://Assets/Custom/Sprites/Barry_Sprite_Sheet.png" id="9_bflum"]
[ext_resource type="Texture2D" uid="uid://dw04cpaod6bun" path="res://Assets/Custom/temp_frog_icon.png" id="9_ilu2c"]
[ext_resource type="Texture2D" uid="uid://dyqj26prpkdqw" path="res://Assets/UISprites/UI_Flat_Frame_02_Lite.png" id="9_og4hm"]
[ext_resource type="Texture2D" uid="uid://b7wkhk0eulw37" path="res://Assets/Custom/Sprites/Antonio.png" id="9_xo7qe"]
[ext_resource type="Texture2D" uid="uid://dmr7ercxgsg81" path="res://Assets/Custom/Sprites/Barry Sad.png" id="10_e8okq"]
[ext_resource type="Texture2D" uid="uid://d1rasp64hd3m" path="res://Assets/Custom/UI_Exclamation_Mark_Plate.png" id="11_pkqqv"]
[ext_resource type="Texture2D" uid="uid://cdrpnr6p77usy" path="res://Assets/Custom/Sprites/Croak.png" id="13_cy7qx"]
[ext_resource type="Texture2D" uid="uid://djx5rl7iobm8m" path="res://Assets/Custom/Sprites/Danny.png" id="14_046bs"]
[ext_resource type="Texture2D" uid="uid://borcws4ydxocc" path="res://Assets/Custom/Sprites/Derick.png" id="15_o5dh2"]
[ext_resource type="Texture2D" uid="uid://cfxvp151wo3uq" path="res://Assets/Custom/Sprites/Old_Man.png" id="16_ee48p"]
[ext_resource type="Texture2D" uid="uid://dflwjoawwuern" path="res://Assets/Custom/Sprites/Hop_Sad.png" id="16_jpr7p"]
[ext_resource type="Texture2D" uid="uid://blea0dsendh8f" path="res://Assets/Custom/Sprites/Leap_Sad.png" id="17_5jcl2"]
[ext_resource type="Texture2D" uid="uid://b20ka352pbpa6" path="res://Assets/Custom/Sprites/Talia.png" id="17_10a58"]
[ext_resource type="Texture2D" uid="uid://32gsflmykho3" path="res://Assets/Custom/Sprites/Rano_Sad.png" id="19_mt8cy"]
[ext_resource type="Texture2D" uid="uid://budj7rqvw50e3" path="res://Assets/Custom/Sprites/Ribbit_Sad.png" id="20_061ni"]
[ext_resource type="PackedScene" uid="uid://caur4c8x7r8ll" path="res://World Scene/UIs/InventoryDialogue.tscn" id="20_wi7a5"]
[ext_resource type="Texture2D" uid="uid://bpl17gwn3b6ye" path="res://Assets/Custom/Light.png" id="22_d1aun"]
[ext_resource type="Texture2D" uid="uid://d0rtr7ojbum5p" path="res://Assets/Custom/Shadow.png" id="23_8ov4e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_weyin"]
texture = ExtResource("2_ln8m6")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0
modulate_color = Color(0, 0.45098, 0.345098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8tvy6"]
texture = ExtResource("2_ln8m6")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0
modulate_color = Color(0, 0.45098, 0.345098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nso30"]
texture = ExtResource("3_vf4oi")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0
modulate_color = Color(0, 0.45098, 0.345098, 1)

[sub_resource type="Theme" id="Theme_q0h0h"]
Button/styles/hover = SubResource("StyleBoxTexture_weyin")
Button/styles/normal = SubResource("StyleBoxTexture_8tvy6")
Button/styles/pressed = SubResource("StyleBoxTexture_nso30")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3d61p"]
bg_color = Color(0, 0.305882, 0.313726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.113725, 0.541176, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="RichTextEffect" id="RichTextEffect_66oxl"]
script = ExtResource("4_1oy2a")

[sub_resource type="RichTextEffect" id="RichTextEffect_emjeb"]
script = ExtResource("5_hejlf")

[sub_resource type="Animation" id="Animation_whxkr"]
resource_name = "Dialogue_popup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(233, 700), Vector2(233, 386)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogueBox:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterIMG:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(239, 755), Vector2(239, 15)]
}

[sub_resource type="Animation" id="Animation_jmis8"]
resource_name = "Voice"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Voice:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cf31b"]
_data = {
"Dialogue_popup": SubResource("Animation_whxkr"),
"Voice": SubResource("Animation_jmis8")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_50wid"]
texture = ExtResource("2_ln8m6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d32tf"]
texture = ExtResource("2_ln8m6")
modulate_color = Color(0.85098, 0.85098, 0.85098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_np7a1"]
texture = ExtResource("3_vf4oi")
modulate_color = Color(0.85098, 0.85098, 0.85098, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lj5br"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c630w"]
atlas = ExtResource("9_bflum")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nce4"]
atlas = ExtResource("9_bflum")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlqs2"]
atlas = ExtResource("17_10a58")
region = Rect2(0, 0, 16, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_bxftl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_86348")
}],
"loop": true,
"name": &"Angelica",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_xo7qe")
}],
"loop": true,
"name": &"Antonio",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_k6djr")
}],
"loop": true,
"name": &"Barry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c630w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nce4")
}],
"loop": true,
"name": &"Barry_Running",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_e8okq")
}],
"loop": true,
"name": &"Barry_Sad",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_cy7qx")
}],
"loop": true,
"name": &"Croak",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_046bs")
}],
"loop": true,
"name": &"Danny",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_o5dh2")
}],
"loop": true,
"name": &"Derick",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_jpr7p")
}],
"loop": true,
"name": &"Hop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_5jcl2")
}],
"loop": true,
"name": &"Leap",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_ee48p")
}],
"loop": true,
"name": &"OldMan",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_mt8cy")
}],
"loop": true,
"name": &"Rano",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_061ni")
}],
"loop": true,
"name": &"Ribbit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlqs2")
}],
"loop": true,
"name": &"Talia",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bc547"]
size = Vector2(34, 42)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gxj27"]
texture = ExtResource("9_og4hm")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vnga"]
size = Vector2(20, 21)

[node name="NPC" type="Area2D"]
z_index = 101
texture_filter = 1
script = ExtResource("1_7ll4o")

[node name="FixedDialoguePosition" type="CanvasLayer" parent="."]

[node name="DialogueOpacity" type="ColorRect" parent="FixedDialoguePosition"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="CharacterIMG" type="TextureRect" parent="FixedDialoguePosition"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.0
offset_top = 431.0
offset_right = -62.0
offset_bottom = 952.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="DialogueBox" type="Panel" parent="FixedDialoguePosition"]
visible = false
self_modulate = Color(1, 1, 1, 0)
z_index = 101
texture_filter = 1
custom_minimum_size = Vector2(256, 128)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -343.0
offset_top = 52.0
offset_right = 343.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_q0h0h")
theme_override_styles/panel = SubResource("StyleBoxFlat_3d61p")
script = ExtResource("2_kithy")
dialogue_data = ExtResource("4_pn0gs")
hide_portrait = true
skip_input_action = "ui_select"
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_66oxl"), SubResource("RichTextEffect_emjeb")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="FixedDialoguePosition"]
libraries = {
"": SubResource("AnimationLibrary_cf31b")
}
speed_scale = 2.5

[node name="Voice" type="Button" parent="FixedDialoguePosition"]
visible = false
z_index = 999
texture_filter = 1
offset_left = 232.0
offset_top = 543.0
offset_right = 302.0
offset_bottom = 613.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_50wid")
theme_override_styles/hover = SubResource("StyleBoxTexture_d32tf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_np7a1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lj5br")
text = "🔊"

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_bxftl")
animation = &"Ribbit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_bc547")

[node name="PressForDialogue" type="Label" parent="."]
visible = false
z_index = 100
texture_filter = 1
offset_left = -14.0
offset_top = -47.0
offset_right = 14.0
offset_bottom = -23.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_gxj27")
text = "Q"
horizontal_alignment = 1

[node name="MapIcon" type="TextureRect" parent="."]
visible = false
z_index = 999
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_ilu2c")

[node name="Notif" type="TextureRect" parent="."]
visible = false
z_index = 1000
offset_left = 35.0
offset_top = -143.0
offset_right = 178.0
texture = ExtResource("11_pkqqv")

[node name="NPCActions" type="Node" parent="."]

[node name="BarryDestination" type="Node" parent="NPCActions"]

[node name="Marker2D" type="Marker2D" parent="NPCActions/BarryDestination"]

[node name="OldManInventory" type="CanvasLayer" parent="NPCActions"]
visible = false

[node name="InventoryDialogue" parent="NPCActions/OldManInventory" instance=ExtResource("20_wi7a5")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_2vnga")

[node name="ShadowRealm" type="PointLight2D" parent="."]
z_index = 999
y_sort_enabled = true
texture_filter = 1
position = Vector2(0, -1)
scale = Vector2(1.5, 1.5)
energy = 0.5
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 3.0
texture = ExtResource("22_d1aun")
texture_scale = 0.5

[node name="Shadow" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -14.0
offset_top = 13.0
offset_right = 14.0
offset_bottom = 29.0
texture = ExtResource("23_8ov4e")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="dialogue_ended" from="FixedDialoguePosition/DialogueBox" to="." method="_on_dialogue_box_dialogue_ended"]
[connection signal="dialogue_proceeded" from="FixedDialoguePosition/DialogueBox" to="." method="_on_dialogue_box_dialogue_proceeded"]
[connection signal="dialogue_signal" from="FixedDialoguePosition/DialogueBox" to="." method="_on_dialogue_box_dialogue_signal"]
[connection signal="animation_finished" from="FixedDialoguePosition/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="FixedDialoguePosition/Voice" to="." method="_on_voice_pressed"]

[editable path="NPCActions/OldManInventory/InventoryDialogue"]
